--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="utf-8">  <!--文字コード指定-->
-    <meta name
-
-  </head>
-
-
+<head>
+  <meta charset="utf-8">  <!--文字コード指定-->
+  <title>PinPonGame</title> <!--タグ名記述-->
+  <link rel=stylesheet href="style.css">
+</head>
+<body>
+  <canvas width="400" height="500"></canvas> <!--キャンバスサイズ指定-->
+</body>
 </html>
