--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
   <canvas width="400" height="500"></canvas> <!--キャンバスサイズ指定-->
+
+  <script src="main.js"></script>
 </body>
 </html>
